--- a/FE/admin-fe/src/app/components/navigation-bar/navigation-bar.component.html
+++ b/FE/admin-fe/src/app/components/navigation-bar/navigation-bar.component.html
@@ -45,7 +45,9 @@
         <li>
           <a routerLink="/create-alarm-for-logs"><span class="fa fa-user mr-5"></span> Create alarm for logs</a>
         </li>
-
+        <li>
+          <a routerLink="/create-alarm-for-dos"><span class="fa fa-user mr-5"></span> Create alarm for DoS attack</a>
+        </li>
         <li>
           <mat-icon class="float-left mt-2">person</mat-icon>
           <a routerLink="/profile"><span class="fa fa-home mr-3"></span>Profile</a>
