--- a/FE/admin-fe/src/app/components/alarm/alarm.component.html
+++ b/FE/admin-fe/src/app/components/alarm/alarm.component.html
@@ -7,7 +7,7 @@
       {{message.ipAddress ? message.ipAddress : ''}}
     </div>
     <div class="col-md-3">
-      {{message.id ? message.id : ''}}
+      ID: {{message.id ? message.id : ''}}
     </div>
     <div class="col-md-3">
       {{message.alarmType ? message.alarmType : ''}}
