--- a/FE/admin-fe/src/app/components/navigation-bar/navigation-bar.component.html
+++ b/FE/admin-fe/src/app/components/navigation-bar/navigation-bar.component.html
@@ -46,14 +46,14 @@
           <a routerLink="/create-alarm-for-logs"><span class="fa fa-user mr-5"></span> Create alarm for logs</a>
         </li>
         <li>
-          <a routerLink="/create-alarm-for-dos"><span class="fa fa-user mr-5"></span> Create alarm for DoS attack</a>
+          <a routerLink="/create-alarm-for-dos"><span class="fa fa-user mr-5"></span> Create alarm for DoS</a>
         </li>
         <li>
           <mat-icon class="float-left mt-2">person</mat-icon>
           <a routerLink="/profile"><span class="fa fa-home mr-3"></span>Profile</a>
         </li>
 
-        <li class="mt-5" (click)="logout()" style="cursor: pointer;">
+        <li class="mt-4" (click)="logout()" style="cursor: pointer;">
 <!--          <button (click)="logout()" class="btn btn-block btn-danger mt-3">Sign out</button>-->
           <mat-icon class="float-left mt-2">close</mat-icon>
           <a><span class="fa fa-sticky-note mr-3 mt-5"></span> Sign out</a>
